--- a/drivers/smarttv/pair/start.html
+++ b/drivers/smarttv/pair/start.html
@@ -38,7 +38,7 @@ function saveSettings () {
 	    },
 	    settings: {
 		    'ipaddress': $('#ipAddress').val(),
-		    'session': $('#session').val()
+		    'session': $('#sessionkey').val()
 	    },
 	    name: $('#Name').val(),
 	    capabilities: [
@@ -55,7 +55,7 @@ function saveSettings () {
 		    },
 		    settings: {
 			    'ipaddress': $('#ipAddress').val(),
-			    'session': $('#session').val()
+			    'session': $('#sessionkey').val()
 		    },
 		    name: $('#Name').val(),
 		    capabilities: [
