Pairing key in settings as well

--- a/drivers/smarttv/pair/start.html
+++ b/drivers/smarttv/pair/start.html
@@ -55,7 +55,8 @@ function saveSettings () {
 		    },
 		    settings: {
 			    'ipaddress': $('#ipAddress').val(),
-			    'session': $('#sessionkey').val()
+			    'session': $('#sessionkey').val(),
+			    'pairingkey': $('#pairingkey').val()
 		    },
 		    name: $('#Name').val(),
 		    capabilities: [
